--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,12 @@
 			<version>1.9</version>
 			<optional>true</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.196</version>
+			<optional>true</optional>
+		</dependency>
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
