--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>net.sf.ha-jdbc</groupId>
 	<artifactId>ha-jdbc</artifactId>
-	<version>3.0.4-SNAPSHOT</version>
+	<version>3.1.0</version>
 	<packaging>jar</packaging>
 	
 	<name>HA-JDBC</name>
@@ -175,8 +175,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
