--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>net.sf.ha-jdbc</groupId>
 	<artifactId>ha-jdbc</artifactId>
-	<version>3.1.1</version>
+	<version>3.2.0</version>
 	<packaging>jar</packaging>
 	
 	<name>HA-JDBC</name>
@@ -135,6 +135,12 @@
 			<artifactId>derby</artifactId>
 			<version>10.11.1.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.181</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	
