--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>net.sf.ha-jdbc</groupId>
 	<artifactId>ha-jdbc</artifactId>
-	<version>3.0.5</version>
+	<version>3.1.2</version>
 	<packaging>jar</packaging>
 	
 	<name>HA-JDBC</name>
@@ -104,13 +104,7 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.196</version>
-			<optional>true</optional>
-		</dependency>
+		</dependency>		
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -131,10 +125,22 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.181</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>10.11.1.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.181</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	
@@ -175,8 +181,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>7</source>
-					<target>7</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
