--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>net.sf.ha-jdbc</groupId>
 	<artifactId>ha-jdbc</artifactId>
-	<version>3.2.5</version>
+	<version>3.2.6</version>
 	<packaging>jar</packaging>
 	
 	<name>HA-JDBC</name>
@@ -53,6 +53,11 @@
 	
 
 	<dependencies>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 		<!-- Optional distributable provider dependencies -->
 		<dependency>
 			<groupId>org.jgroups</groupId>
