--- a/build.gradle
+++ b/build.gradle
@@ -99,4 +99,16 @@ java {
     withSourcesJar()
 }
 
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "http://${nexus_host}:8081/repository/maven-releases/") {
+                authentication(userName: project.rootProject.username, password: project.rootProject.password)
+            }
+            snapshotRepository(url: "http://${nexus_host}:8081/repository/maven-snapshots/") {
+                authentication(userName: project.rootProject.username, password: project.rootProject.password)
+            }
+        }
+    }
+}
 
